--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
     "allowJs": true,
     "checkJs": true,
     "module": "CommonJS",
-    "target": "ES5",
+    "target": "ES2015",
     "isolatedModules": true,
     "resolveJsonModule": true,
     "noEmit": true,
     "strict": true,
     "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noUncheckedIndexedAccess": true,
+    // "noPropertyAccessFromIndexSignature": true,
+    // "noUncheckedIndexedAccess": true,
     "allowUnreachableCode": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true
